...
    <string name="feedback_email_body">Write your feedback</string>

    <string name="last_result">0</string>
    <string name="left_bracket">(</string>
    <string name="right_bracket">)</string>
    <string name="percent">%</string>
    <string name="clearAll">AC</string>
    <string name="clear">CE</string>
    <string name="square_root">√</string>
    <string name="squared">x²</string>
    <string name="factorial">x!</string>
    <string name="divide">÷</string>
    <string name="digit_seven">7</string>
    <string name="digit_eight">8</string>
...
